# matrixCPP

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  s21_matrix_oop.cpp  s21_matrix_oop.h  s21_matrix_oop_constructors.cpp  s21_matrix_oop_operators.cpp
src/tests/: test.cpp  test.h  test_constructors.cpp  test_eq.cpp  test_math.cpp  test_operators.cpp
